# DystroCPLEX

./: .gitignore  CMakeLists.txt  README.md
include/: DystroCPLEX.h
opl/: .oplproject  .project  Dystro.mod
src/: DystroCPLEX.cpp
